Fix overscroll on Safari

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -50,6 +50,7 @@ body {
   margin: 0;
   padding: 0;
   overscroll-behavior: none;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
